add filter and sorting for getting invoices
