# backend/src/api/controllers/invoice.controller.js
@@ -5,12 +5,25 @@ import Invoice from "../models/invoice.model";
 
 export default {
   findAll(req, res, next) {
-    const { page = 1, perPage = 10 } = req.query;
+    const { page = 1, perPage = 10, filter, sortField, sortDir } = req.query;
     const options = {
       page: parseInt(page, 10),
       limit: parseInt(perPage, 10),
     };
-    Invoice.paginate({}, options)
+    const query = {};
+    if (filter) {
+      query.item = {
+        $regex: filter,
+      };
+    }
+
+    if (sortField && sortDir) {
+      options.sort = {
+        [sortField]: sortDir,
+      };
+    }
+
+    Invoice.paginate(query, options)
       .then((invoices) => res.json(invoices))
       .catch((err) => res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err));
   },
